RESOLVED FIXED154545
[WinCairo] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=154545
Summary [WinCairo] Compile fix.
peavo
Reported 2016-02-22 11:19:52 PST
..\..\Source\WebKit\win\WebCoreSupport\AcceleratedCompositingContext.cpp(363): error C2660: 'WebCore::GraphicsLayerTextureMapper::updateBackingStoreIncludingSubLayers': function does not take 0 arguments
Attachments
Patch (1.53 KB, patch)
2016-02-22 11:23 PST, peavo
no flags
peavo
Comment 1 2016-02-22 11:23:40 PST
Alex Christensen
Comment 2 2016-02-22 11:27:33 PST
peavo
Comment 3 2016-02-22 11:58:28 PST
Thanks for reviewing, Alex :)
WebKit Commit Bot
Comment 4 2016-02-22 12:15:26 PST
Comment on attachment 271937 [details] Patch Clearing flags on attachment: 271937 Committed r196951: <http://trac.webkit.org/changeset/196951>
WebKit Commit Bot
Comment 5 2016-02-22 12:15:30 PST
All reviewed patches have been landed. Closing bug.
Carlos Garcia Campos
Comment 6 2016-03-16 00:18:27 PDT
Note You need to log in before you can comment on or make changes to this bug.