[WinCairo] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=154545

Reviewed by Alex Christensen.

Add missing parameter to GraphicsLayerTextureMapper::updateBackingStoreIncludingSubLayers().

* WebCoreSupport/AcceleratedCompositingContext.cpp:
(AcceleratedCompositingContext::flushPendingLayerChanges):


Canonical link: https://commits.webkit.org/172657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196951 268f45cc-cd09-0410-ab3c-d52691b4dbfc